K8s-file/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather
spec:
  selector:
    matchLabels:
      app: weather
  template:
    metadata:
      labels:
        app: weather
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: docker.io/siddhi2003/weather-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
