K8s-file/service.yml
apiVersion: v1
kind: Service
metadata:
  name: weather
spec:
  selector:
    app: weather
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  type: NodePort
